--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run --dir src/use-cases",
-    "test:watch": "vitest --dir src/use-cases"
+    "test:watch": "vitest --dir src/use-cases",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +31,11 @@
     "@faker-js/faker": "9.0.3",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.7.5",
+    "@types/supertest": "6.0.2",
     "eslint": "^8.57.1",
+    "npm-run-all": "4.1.5",
     "prisma": "5.20.0",
+    "supertest": "7.0.0",
     "tsup": "8.3.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
